# io-replicate

./: .gitignore  AGENTIC_WORKFLOW.md  AUDIT_AND_REFACTORS.md  CLAUDE.md  GENERALIZATION_PLAN.md  PIPELINE_IMPROVEMENT_PLAN.md  README.md  config.yaml  pyproject.toml  requirements.txt  run_agentic.py  run_deterministic.py
.omx/context/: execute-plan-20260401T063145Z.md
.omx/plans/: prioritized-fix-plan-2026-04-01.md
agents/: __init__.py  agent_runner.py  llm.py  message_utils.py  orchestrator.py  state.py  token_tracker.py
agents/prompts/: __init__.py  classification_mapper.py  data_acquirer.py  data_guide.py  data_preparer.py  output_producer.py  paper_analyst.py  reviewer.py
agents/tools/: __init__.py  classification_tools.py  execute_python.py  file_tools.py
agents/validators/: __init__.py  benchmark_validator.py  prep_validator.py  spec_validator.py
cli/: main.py
data_guides/: README.md
data_guides/a423740bcbce83d4/: README.md  data_guide.yaml
docs/: architecture.md  pipeline-crash-modes.md  replication-failure-modes.md  user_guide.md
nodes/: __init__.py  classification_mapper.py  data_acquirer.py  data_guide.py  data_preparer.py  decomposer.py  human_data_upload_gate.py  model_builder.py  output_producer.py  paper_analyst.py  reviewer.py  spec_reconciler.py
schemas/: replication_spec_schema.yaml
skills/: README.md  __init__.py  pyproject.toml
skills/classification_mapping/: SKILL.md  __init__.py  concordances.py  core.py
skills/io_parsers/: SKILL.md  __init__.py  base.py
skills/io_parsers/exiobase/: __init__.py  core.py
skills/io_parsers/figaro_iciot/: __init__.py  core.py
skills/io_parsers/oecd_icio/: __init__.py  core.py
skills/io_parsers/wiod_mrio/: __init__.py  core.py
skills/leontief/: SKILL.md  __init__.py  core.py
specs/figaro_2019/: replication_spec.yaml
tests/: test_classification_mapping.py  test_decomposer.py  test_exiobase_parser.py  test_file_tools.py  test_message_utils.py  test_model_builder.py  test_oecd_icio_parser.py  test_spec_validator.py  test_wiod_parser.py
